# erdos-gyarfas-p14

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHATGPT_REVIEW_PROTOCOL.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CURRENT_STATUS.md  DECISION_LOG.md  Dockerfile  LICENSE  PROJECT_KNOWLEDGE.md  README.md  RESEARCH_LOG.md  REVIEW_STATE.yaml  pyproject.toml  start.md
.github/workflows/: ci.yml  heavy-search.yml
_TEMPLATES/: DECISION_TEMPLATE.md  EVIDENCE_TEMPLATE.md  EXPERIMENT_MANIFEST_TEMPLATE.json  TASK_LOG_TEMPLATE.md  TASK_STATUS_TEMPLATE.md
artifacts/: README.md
benchmarks/: README.md
benchmarks/cases/: upstream-small-k.json
docs/: ARTIFACT_FORMATS.md  CI.md  DEVELOPMENT.md  TRUST_BOUNDARY.md
ops/TASK-20260715__bootstrap_reproducible_baseline/: EVIDENCE.md  TASK_LOG.md  TASK_STATUS.md
ops/TASK-20260717__bind_heavy_workflow_task_identity/: EVIDENCE.md  TASK_LOG.md  (+1 more)
research/: BIBLIOGRAPHY.md  CLAIMS_REGISTRY.yaml  ENVIRONMENT_LOCK_INVENTORY.json  ENVIRONMENT_TRUST_BOUNDARY.md  KNOWN_RESULTS.md  NEGATIVE_RESULTS.md  NEXT_RESEARCH_STEPS.md  PROBLEM_STATEMENT.md  PRUNING_REGISTRY.md  REPRODUCIBILITY.md  SEARCH_MODEL.md  UPSTREAM_ALGORITHM.md  VERIFICATION_PROTOCOL.md
schemas/: benchmark-result.schema.json  counterexample.schema.json  environment-lock-inventory.schema.json  experiment-manifest.schema.json  inspector-timeout-stability-evidence-v2.schema.json  inspector-timeout-stability-evidence.schema.json  search-certificate.schema.json  search-partition.schema.json  surprising-process-outcome.schema.json
tools/: _common.py  check_github_action_pins.py  check_review_range_whitespace.py  hash_artifacts.py  inspect_upstream_candidate.py  make_manifest.py  resolve_review_task_id.py  run_benchmark.py  run_inspector_timeout_stability.py  validate_schemas.py  verify_inspector_timeout_stability.py  verify_manifest.py  verify_upstream_snapshot.py
upstream/: README.md  UPSTREAM_PROVENANCE.json  UPSTREAM_REFS.json
verifier/: README.md
(+89 files in other folders)
